--- a/reports/presentations/progress_reports/meeting_201804XX/pop_struct.Rmd
+++ b/reports/presentations/progress_reports/meeting_201804XX/pop_struct.Rmd
@@ -5,14 +5,13 @@ date: "23/04/2018"
 output: pdf_document
 ---
 
-```{r load, echo=F}
-packs <- c("ggplot2","dplyr","readr","viridis", "magrittr", "gridExtra", "ggrepel", "Rcpp", "tibble")
+```{r load, global_opts, echo=F}
+packs <- c("ggplot2","dplyr","readr","viridis", "magrittr", "gridExtra", "ggrepel", "Rcpp", "tibble", "tidyr")
 packs <- suppressPackageStartupMessages(sapply(packs, library, quietly=T, character.only=T))
 
 setwd("../../../../")
+options(readr.show_progress=F)
 raw <- read_tsv("data/wgs_wild/variant/hap.wild.matrix.txt", col_names=F, na='.', col_types = cols())
-
-snp <- raw %>% filter_at(-(1:2), any_vars(.!=0))
 
 # Sample names for plotting
 sample_names <- read.table("data/wgs_wild/wgs_samples.tsv", header=F, stringsAsFactors = F)
@@ -20,31 +19,44 @@ sample_names <- read.table("data/wgs_wild/wgs_samples.tsv", header=F, stringsAsF
 zoom <- 10^6
 
 # Nucleotidic diversity (PI) computed in 100bp windows
-div100 <- read_tsv("data/wgs_wild/stats/win_w100_t10_PI.tsv", col_type=cols(), col_names=F)
+div <- read_tsv("data/wgs_wild/stats/win_w1000_t10_PI.tsv", col_type=cols(), col_names=F)
 
 ```
 
+```{r missing_regions, echo=F}
 
-```{r sanity_check}
-# Checking if positions are missing (i.e. indels or SV left)
-sanity <- raw %>% 
-  group_by(X1) %>%
-  arrange(X2) %>%
-  mutate(BP_lag = lag(X2, n = 1L)) %>%
-  mutate(shift = BP_lag - X2) %>%
-  select(X1, X2, shift)
+# Remove positions where there is less than X samples available
+missing_thresh <- 10
+
+raw <- raw %>% 
+  # Create dummy variable to track sites where enough samples are available
+  mutate(low.samples = rowSums(!is.na(select(.,-(1:2)))) < missing_thresh) %>%
+  # Replace all samples with NAs at low samples sites
+  mutate_at(-(1:2), .funs=funs(ifelse(low.samples, yes = NA, no = . ))) %>%
+  # Remove dummy variable
+  select(-low.samples)
+
+missing_pos <- raw %>%
+  mutate(N_missing = rowSums(is.na(select(.,-(1:2))))) %>%
+  select(X1,X2,N_missing)
 
 ```
 
+```{r format, echo=F, cache=T, cache.lazy=F}
 
-```{r format, echo=F}
-
-# Remove SNPs where non-reference allele is fixed
-snp <- snp %>% filter_at(-(1:2), any_vars(.!=1))
+# Remove fixed sites
+snp <- raw  %>% 
+  mutate(dummy_geno=rowMeans(select(., -(1:2)))) %>%
+  filter_at(-(1:2), any_vars(.!=dummy_geno)) %>%
+  select(-dummy_geno)
 
 colnames(sample_names) <- c("Name","Sex")
+
 # Generating separate ID for second haplotype of females
-tmp_fem <- sample_names %>% filter(Sex=="F") %>% mutate(Name = sprintf("%s_2", Name))
+tmp_fem <- sample_names %>% 
+  filter(Sex=="F") %>% 
+  mutate(Name = sprintf("%s_2", Name))
+
 haplo_names <- sample_names %>% 
   mutate(Name = ifelse(Sex=='F', 
                        yes=sprintf("%s_1",Name),
@@ -55,11 +67,30 @@ haplo_names <- sample_names %>%
 
 ```
 
+```{r dist_missing, echo=F, fig.cap="\\label{fig:dist_missing}Distribution of the number of missing sites after wiping all sites with less than 10 samples available. The peak at 19 is the result of the cleaning."}
+hist(missing_pos$N_missing)
+```
+
+```{r missing_coord, echo=F, fig.cap="\\label{fig:missing_coord}Repartition of missing sites along the gneome. Note all sites with low number of samples have been set to NA only (thus increasing the contrast)."}
+ggplot(missing_pos, aes(x=X2/zoom, y=N_missing)) +
+  facet_wrap(~X1) + 
+  stat_smooth() +
+  ggtitle("Distribution of missing sites: after cleaning") +
+  xlab("position [Mb]") +
+  ylab("missing samples")
+```
+
 # Background
 The main goal here is to characterize genetic relatedness between indiviuals of different ploidies. The second goal is to identify regions of high female heterozygosity compared to overall variation.
 
 # Relatedness
 To measure relatedness, I use Nei's distance. The genetic distance between individuals X and Y at site i is defined as: $_nei^i_{XY}=1-\sum_{j}^{A,C,T,G}\sqrt{p^{i}_{j \in X}p^{i}_{j \in Y}}$ where $p_j^i$ is the frequency of nucleotide j at site i.
+
+# Female heterozygosity
+
+Regions of increased female heterozygosity would be expected around CSD. Computing the ratio of female heterozygosity to overall PI does not show any clear signal (and might be irrelevant, heterozygous regions with low PI will score higher). Something like a product could be better. 
+
+I noticed sudden spikes of PI in windows and noticed these can be caused by positions with very few individuals are available (e.g. 2 samples with different alleles). To make other analyses, I will consider sites with very few samples available (i.e. less than ```r missing_thresh```) as missing.
 
 ```{r nei_def, echo=F}
 
@@ -102,7 +133,7 @@ nei_dist <- function(X){
 ```
 
 
-```{r dist_comp, echo=F}
+```{r dist_comp, echo=F, cache=T, cache.lazy=F}
 
 # Splits female haplotypes, merge them and recode all alleles into frequencies. Note this code depends on the fact that samples are ordered by names with females at the end of the list....
 
@@ -144,7 +175,7 @@ dis_mat <- nei_dist(freq)
 
 ```
 
-```{r WGS_MDS}
+```{r WGS_MDS, cache=T, cache.lazy=F, dependson = 'dist_comp', echo=F}
 
 N_MDS <- cmdscale(dis_mat)
 colnames(N_MDS) <- c("Dim1","Dim2"); rownames(N_MDS) <- NULL
@@ -159,10 +190,10 @@ ggplot(N_MDS, aes(x=Dim1, y=Dim2, col=Sex, label=Name)) +
 
 ```
 
-```{r peak_diff}
+```{r peak_diff, cache=T, cache.lazy=F, dependson = 'dist_comp', echo=F}
 
-PIpeaks <- subset(div100, div100$X4>0.35)
-region_size <- 10000; chr <- ""; pk_coord <- 0
+PIpeaks <- div %>% top_n(n=5, wt=X4)
+region_size <- 100000; chr <- ""; pk_coord <- 0
 peakplots <- list()
 gg_idx <- 1
 
@@ -199,11 +230,11 @@ grid.arrange(grobs=peakplots,ncol=2)
 ```
 
 
-```{r het_vs_div}
+```{r het_vs_div, cache=T, cache.lazy=F, echo=F, dev='png'}
 
 # Comparing female heterozygosity vs overall genetic diversity along the genome in windows
 # Diversity measured in 100bp windows with 10bp steps. Need to compute heterozygosity using the same values.
-win_size=100
+win_size=1000
 win_step=10
 
 # Proportion of heterozygous SNPs vs PI in windows
@@ -214,7 +245,30 @@ for(i in unique(snp$X1)){
   chr_het <- RcppRoll::roll_mean(state[raw$X1==i,], n = win_size, by = win_step, align = 'left', na.rm = T)
   chr_het <- data.frame(start=win_start,end=win_start+win_size,Chr=rep(i),chr_het[seq(1,nrow(chr_het),by=win_step),])
   het_win <- rbind(het_win, chr_het)
-#ratio <- meanwin/div100
 }
-#plot(x=bp, y=ratio)~Chr
+# Trying to engineer a feature for CSD-ness from PI and female heterozygosity
+CSD <- het_win
+CSD[,4:dim(CSD)[2]] <- CSD[,4:dim(CSD)[2]]*div$X4
+ind_CSD <- CSD %>% gather(female, CSD, -start, -end, -Chr)
+CSD$mean_CSD <- rowMeans(CSD[,4:dim(CSD)[2]])
+
+ggplot(CSD, aes(x=((start+end)/2)/zoom, y=mean_CSD)) + 
+  geom_line() + 
+  facet_wrap(~Chr) +
+  ggtitle(paste0("CSD proxy using PI and female heterozygosity [", win_size, "bp windows]")) + 
+  xlab("Position [Mb]") + 
+  ylab("Mean female het. by overall PI product")
+
 ```
+
+```{r ind_het_div, cache=T, cache.lazy=F, dependson='het_vs-div', echo=F, dev='png'}
+ggplot(ind_ratio, aes(x=((start+end)/2)/zoom, y=ratio, col=female)) + 
+  geom_line(alpha=0.4) + 
+  facet_wrap(~Chr) +
+  ggtitle("CSD proxy using PI and female heterozygosity") + 
+  xlab("Position [Mb]") + 
+  ylab("Individual female het. by overall PI product")
+```
+
+
+
